wednesday night first

--- a/src/app/ngo/dashboard/dashboard.component.html
+++ b/src/app/ngo/dashboard/dashboard.component.html
@@ -106,7 +106,18 @@
       </div>
     </div>
     <div class="col-lg-6">
-      <div class="card graph-card"></div>
+      <div class="card graph-card">
+  
+      </div>
     </div>
   </div>
+<div id="char">
+  <fusioncharts
+  width="700"
+  height="400"
+  type="Column2d"
+  [dataSource]="dataSource"
+>
+</fusioncharts>
+</div>
 </div>
