--- a/src/app/ngo/entry-form/entry-form.component.html
+++ b/src/app/ngo/entry-form/entry-form.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid bg">
-    <div class="container-fluid">
+   
         <ngx-spinner
         bdColor="rgba(51,51,51,0.8)"
         size="medium"
@@ -50,13 +50,13 @@
             <input required type="number" name='van'[(ngModel)]='data.van'class="form-control">
 
             <label>Total number of people reached through IE&C</label>
-            <input required name="people_reached" [(ngModel)]='data.mobile_van'type="number" class="form-control">
+            <input required name="iec_reached" [(ngModel)]='data.iec_reached'type="number" class="form-control">
 
             <label>Total number of pregnant women identified</label>
-            <input required name="pregnant_women_identified" type="number"[(ngModel)]='data.total_pregnant_women' class="form-control">
+            <input required name="pregnant_women_identified" type="number"[(ngModel)]='data.pregnant_women_identified' class="form-control">
 
             <label>Total number of pregnant women followed up</label>
-            <input required name="pregnant_women_followed"[(ngModel)]='data.pregnant_women' type="number" class="form-control">
+            <input required name="pregnant_women_followed"[(ngModel)]='data.pregnant_women_followed' type="number" class="form-control">
 
             <header>Total Number of pregnant women who took any dose</header>
             <hr>
