--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -4,12 +4,30 @@
     .login_img{
         background-color: #0E592F;
         height:100%;
+        background-image:  linear-gradient(45deg, #198754, rgba(8,83,156, 0.75)),url("../../assets/bg.jpg");
+        background-position: center; /* Center the image */
+        background-repeat: no-repeat; /* Do not repeat the image */
+        background-size: cover; 
+
+    }
+
+    .app-title{
+        color:#ffff;
+
+        .title{
+            font-size:30px;
+        }
     }
 
     .login_container{
         height:100%;
-        padding:50px;
-        background-color:#F7F4F5;
+        padding:100px;
+        
+        background-color:#f2f1f1;
+        
+        .card{
+            box-shadow: 1px 1px 1px 1px rgb(100 100 100 / 10%);
+        }
 
         .form-control:focus{
             border-color: none;
@@ -24,11 +42,19 @@
 
             button{
                 height:50px;
-                background-color: 
-                #0E592F;
+               
                 color: #ffffff;
             }
         }
+    }
+}
+
+.img-container{
+    display: flex;
+align-items: center;
+justify-content: center;
+    img{
+        width:80px;
     }
 }
 
@@ -36,5 +62,7 @@
     .login_img{
         display: none;
     }
+
+   
  }
 
