--- a/src/app/ngo/dashboard/dashboard.component.html
+++ b/src/app/ngo/dashboard/dashboard.component.html
@@ -1,12 +1,23 @@
+<ngx-spinner
+bdColor="rgba(51,51,51,0.8)"
+size="medium"
+color="#fff"
+type="ball-spin"
+name="spinner2"
+[fullScreen] = "true"
+>
+<p style="font-size: 20px; color: white">Loading dashboard...</p>
+</ngx-spinner>
 <div class="container-fluid bg">
     <div class="title"><i class="bi bi-speedometer"></i> {{title}}</div>
+    <div class="sub-title">Displays summary of all entries that have been made</div>
   <div class="row row-margin">
     <div class="col-lg-3 col-md-6">
       <div class="card data-card">
-        <div>Lifetime submissions</div>
+        <div>Total number of reports submitted</div>
         <div class="row">
           <div class="col-6"><i class="bi bi-view-list"></i></div>
-          <div class="col-6"><div class="float-end">{{lifetime}}</div></div>
+          <div class="col-6"><div class="float-end">{{lifetime||0}}</div></div>
         </div>
       </div>
     </div>
@@ -15,7 +26,7 @@
         <div>Sensitizations at mosque</div>
                 <div class="row">
           <div class="col-6"><i class="bi bi-view-list"></i></div>
-          <div class="col-6"><div class="float-end">{{mosque}}</div></div>
+          <div class="col-6"><div class="float-end">{{mosque||0}}</div></div>
         </div>
       </div>
     </div>
@@ -24,16 +35,16 @@
         <div>Sensitizations at church</div>
                 <div class="row">
           <div class="col-6"><i class="bi bi-buildings-fill"></i></div>
-          <div class="col-6"><div class="float-end">{{church}}</div></div>
+          <div class="col-6"><div class="float-end">{{church||0}}</div></div>
         </div>
       </div>
     </div>
     <div class="col-lg-3 col-md-6">
       <div class="card data-card card-marg">
-        <div>Sensitizations at community halls</div>
+        <div>Community durbars</div>
                 <div class="row">
           <div class="col-6"><i class="bi bi-building"></i></div>
-          <div class="col-6"><div class="float-end">{{community_aannouncement}}</div></div>
+          <div class="col-6"><div class="float-end">{{community_aannouncement||0}}</div></div>
         </div>
       </div>
     </div>
@@ -42,10 +53,10 @@
   <div class="row row-margin">
     <div class="col-lg-3 col-md-6">
       <div class="card data-card">
-        <div>Sensitization sessions at Markets</div>
+        <div>Sensitization sessions at schools</div>
                 <div class="row">
           <div class="col-6"><i class="bi bi-shop-window"></i></div>
-          <div class="col-6"><div class="float-end">{{markets}}</div></div>
+          <div class="col-6"><div class="float-end">{{schools||0}}</div></div>
         </div>
       </div>
     </div>
@@ -54,7 +65,7 @@
         <div>Mobile Van Announcements</div>
                 <div class="row">
           <div class="col-6"><i class="bi bi-car-front-fill"></i></div>
-          <div class="col-6"><div class="float-end">{{mobile_van}}</div></div>
+          <div class="col-6"><div class="float-end">{{mobile_van||0}}</div></div>
         </div>
       </div>
     </div>
@@ -63,7 +74,7 @@
         <div>Video shows</div>
                 <div class="row">
           <div class="col-6"><i class="bi bi-camera-reels-fill"></i></div>
-          <div class="col-6"><div class="float-end">{{video_shows}}</div></div>
+          <div class="col-6"><div class="float-end">{{video_shows||0}}</div></div>
         </div>
       </div>
     </div>
@@ -72,46 +83,54 @@
         <div>Radio announcements</div>
                 <div class="row">
           <div class="col-6"><i class="bi bi-music-player"></i></div>
-          <div class="col-6"><div class="float-end">{{radio_discussion}}</div></div>
+          <div class="col-6"><div class="float-end">{{radio_discussion||0}}</div></div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="row">
+  <div class="row row-margin">
     <div class="col-lg-6">
       <div class="card graph-card">
-        <header class="text-center">Last five entries made</header>
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Funerals</th>
-              <th scope="col">Radio discussions</th>
-              <th scope="col">Mobile vans</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let data of info; index as i; first as isFirst">
-              <th scope="row">{{data.id}}</th>
-              <td>{{data.funerals}}</td>
-              <td>{{data.radio_discussion}}</td>
-              <td>{{data.mobile_van}}</td>
-            </tr>
-       
-
-        
-          </tbody>
-        </table>
+        <ngx-spinner name="spinner4" [fullScreen]="false" type="ball-clip-rotate-multiple" size="medium">
+          <p style="font-size: 20px; color: white">Loading chart...</p>
+        </ngx-spinner>
+        <canvas  id="people-Chart"></canvas>
       </div>
     </div>
     <div class="col-lg-6">
+     
       <div class="card graph-card">
-  
+        <ngx-spinner name="spinner1" [fullScreen]="false" type="ball-clip-rotate-multiple" size="medium">
+          <p style="font-size: 20px; color: white">Loading chart...</p>
+        </ngx-spinner>
+       <canvas id="media-Chart"></canvas>
+      
       </div>
     </div>
   </div>
-<div id="char">
+  <div class="row row-margin">
+    <div class="col-lg-6">
+      <div class="card graph-card">
+        <ngx-spinner name="spinner3" [fullScreen]="false" type="ball-clip-rotate-multiple" size="medium">
+          <p style="font-size: 20px; color: white">Loading chart...</p>
+        </ngx-spinner>
+        <canvas id="senisitization-Chart"></canvas>
+  
+      </div>
+    </div>
+    <div class="col-lg-6">
+      <div class="card graph-card">
+        <ngx-spinner name="spinner5" [fullScreen]="false" type="ball-clip-rotate-multiple" size="medium">
+          <p style="font-size: 20px; color: white">Loading chart...</p>
+        </ngx-spinner>
+        <canvas id="myChart"></canvas>
+      
+      </div>
+    </div>
 
-</div>
+
+  </div>
+
+
 </div>
