--- a/src/app/ngo/dashboard/dashboard.component.scss
+++ b/src/app/ngo/dashboard/dashboard.component.scss
@@ -2,7 +2,7 @@
 .data-card{
     padding:15px;
     background-color: #ffffff !important;
-    
+    font-size:14px;
 }
 
 
@@ -11,7 +11,10 @@
     height:270px;
 }
 
-
+.myChart{
+    width:100%;
+    height:100%;
+}
 .row-margin{
     margin-bottom:20px !important;
 }
