--- a/src/app/ngo/entry-form/entry-form.component.scss
+++ b/src/app/ngo/entry-form/entry-form.component.scss
@@ -13,7 +13,18 @@ form{
     button{
         height:50px;
         background-color: 
-        #0E592F;
+        #198754;
         color: #ffffff;
+        width:120px;
     }
 }
+
+.form-control:focus{
+    border-color: none !important;
+    box-shadow: none !important;
+}
+
+.toast-container {
+    z-index: 1200
+
+    }
