--- a/src/app/ngo/template/top-nav/top-nav.component.html
+++ b/src/app/ngo/template/top-nav/top-nav.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar fixed-top navbar-expand-lg bg-light ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">NGOs</a>
+      <a class="navbar-brand" routerLink="/ngo/dashboard">NGOs</a>
+      <div class="text-light">[{{ngo_name}}]</div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -15,17 +16,25 @@
             <a class="nav-link active" routerLink="/ngo/entry" aria-current="page" href="#">Entry Form</a>
           </li>
 
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Yearly Dashboard</a>
+            <ul  class="dropdown-menu dropdown-menu-end">
+              <li  *ngFor="let da of year_list; index as i"><a class="dropdown-item" href="/ngo/yearly-dashboard/{{da.years}}" >{{da.years}}</a></li>
+
+            </ul>
+          </li>
+
           <li class="nav-item">
-            <a class="nav-link active" routerLink="/ngo/report" aria-current="page" href="#">Reports</a>
+            <a class="nav-link active" routerLink="/ngo/report" aria-current="page" >Reports</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              God is Good NGO
+             {{full_name[0].first_name}} {{full_name[0].last_name}}
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
-              <li><a class="dropdown-item" href="#">Settings</a></li>
-              <li><a class="dropdown-item" href="#">Account</a></li>
-              <li><a class="dropdown-item" href="#">Logout</a></li>
+              <li><a class="dropdown-item" >Settings</a></li>
+              <li routerLink="/ngo/update-account"><a class="dropdown-item" >Account</a></li>
+              <li (click)="logout()"> <a class="dropdown-item" href="#">Logout</a></li>
             </ul>
           </li>
         </ul>
