--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
-
-.bg,body{
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+.bg{
+   
+    font-family: 'Poppins' !important;
     background-color: #F2F2F2;
-    height:100vh;
-    padding-top:30px;
-    
+    height:100%;
+    padding-top:70px;
+    width:100%;
+
+}
+
+.edit-btn{
+    background-color: #347BBB !important;
+    color:#ffffff !important;
+}
+
+.export{
+    background-color: #70AE6D !important;
+    color:#ffff !important;
+}
+
+thead{
+    background-color: #ffff !important; 
+} 
+
+html{
+    background-color: #F2F2F2;
+    height:100%;
 }
 
 i{
-    color:#0E592F !important;
+    color:#198754 !important;
     font-size:20px
 }
 
@@ -16,6 +38,75 @@ i{
     font-size: 20px;
 }
 
+.form-control:focus{
+    border-color: none !important;
+    box-shadow: none !important;
+}
+
+
+canvas{
+    width:100% !important;
+}
+
 /* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
-@import '~bootstrap-icons/font/bootstrap-icons.css';
+@import '../node_modules/bootstrap/scss/bootstrap';
+@import '../node_modules/bootstrap-icons/font/bootstrap-icons.css';
+
+
+
+/** Styles for navbars**/
+.navbar-nav {
+    margin-left: auto;
+  }
+  
+  .nav-link {
+    color: #ffffff !important;
+    font-size: 14px;
+  }
+  
+  .navbar {
+    background-color: 
+    #198754 !important;
+   
+  }
+  
+  .navbar-brand {
+    color: #ffffff;
+  }
+  
+  .navbar-toggler-icon{
+    color:#ffffff !important;
+  }
+
+  /**dashboard styles global**/
+
+  
+.data-card{
+    padding:15px;
+    background-color: #ffffff !important;
+    font-size:14px;
+}
+
+
+
+.graph-card{
+    height:270px;
+}
+
+.myChart{
+    width:100%;
+    height:100%;
+}
+.row-margin{
+    margin-bottom:20px !important;
+}
+
+@media (max-width: 991.98px){ 
+    .data-card{
+        margin-bottom:20px;
+    }
+    .card-marg{
+        margin-bottom: 0;
+    }
+ }
+
