--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,9 +12,9 @@
   <div class="row row_height">
     <div class="col row login_img justify-content-center  align-items-center">
       <div class="app-title text-center">
-        <div class="title">Malaria NGOs Reporting System</div>
+        <div class="title">Malaria SBC Reporting System</div>
         <div class="img-container">
-     Reporting Activities of Malaria NGos
+     Reporting Activities of SBC
       </div>
       </div>
     </div>
