--- a/src/app/ngo/template/top-nav/top-nav.component.html
+++ b/src/app/ngo/template/top-nav/top-nav.component.html
@@ -13,7 +13,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" routerLink="/ngo/entry" aria-current="page" href="#">Entry Form</a>
+            <a class="nav-link active" routerLink="/ngo/entry" aria-current="page" href="#">Data Entry Form</a>
           </li>
 
           <li class="nav-item dropdown">
