--- a/src/app/ngo/view-entry/view-entry.component.html
+++ b/src/app/ngo/view-entry/view-entry.component.html
@@ -83,7 +83,7 @@
 
       <label>IPTp5</label>
       <input required type="number" [(ngModel)]='data.iptp_five 'name="iptp_five" class="form-control"><br>
-      <button type="submit "(click)="form.checkValidity()? submitForm(): null"class="form-control btn btn-success ">Updatw entry</button>
+      <button type="submit "(click)="form.checkValidity()? submitForm(): null"class="form-control btn btn-success ">Update entry</button>
 
     </form>
 </div>
