--- a/src/app/ngo/report/report.component.html
+++ b/src/app/ngo/report/report.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid bg">
   <div class="title"><i class="bi bi-speedometer"></i> {{ title }}</div>
   <div class="sub-title">Generate various reports for various summaries</div>
-  <div class="report-heading">PDF Reports</div>
+ <!-- <div class="report-heading">PDF Reports</div>
   <div class="row row-margin">
     <div class=" col-lg-3 col-xs-12 col-md-6">
       <div class="card">
@@ -17,9 +17,9 @@
     </div>
 
    
-  </div>
+  </div>-->
 
-  <div class="report-heading">Excel generation</div>
+  <div class="report-heading">Excel Reports</div>
   <div class="row row-margin">
  
     <div class="col-lg-3 col-xs-12 col-md-6">
