--- a/src/app/ngo/view-entry/view-entry.component.html
+++ b/src/app/ngo/view-entry/view-entry.component.html
@@ -55,6 +55,15 @@
       <label>Number of Mobile van announcements</label>
       <input required type="number" name='mobile_van'[(ngModel)]='data.mobile_van'class="form-control">
 
+      <label>Total number of trainings conducted for volunteers</label>
+      <input required name="volunteers_trained" type="number"[(ngModel)]='data.volunteers_trained' class="form-control">
+
+                  <label>Total number of trainings conducted for opinion leaders</label>
+      <input required name="opinion_leaders" type="number"[(ngModel)]='data.opinion_leaders' class="form-control">
+
+            <label>Total number of house to house visits</label>
+      <input required name="house_visits" type="number"[(ngModel)]='data.house_visits' class="form-control">
+
 
 
       <label>Total number of pregnant women identified</label>
